<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <!--4X4 Table Layout-->
    <TableLayout
        android:id="@+id/glGameBoard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:columnCount="4"
        android:rowCount="4">

        <!--Row 1-->
        <TableRow>

            <Button
                android:id="@+id/s00"
                style="@style/Square" />

            <Button
                android:id="@+id/s01"
                style="@style/Square" />

            <Button
                android:id="@+id/s02"
                style="@style/Square" />

            <Button
                android:id="@+id/s03"
                style="@style/Square" />

        </TableRow>

        <!--Row 2-->
        <TableRow>

            <Button
                android:id="@+id/s10"
                style="@style/Square" />

            <Button
                android:id="@+id/s11"
                style="@style/Square" />

            <Button
                android:id="@+id/s12"
                style="@style/Square" />

            <Button
                android:id="@+id/s13"
                style="@style/Square" />

        </TableRow>

        <!--Row 3-->
        <TableRow>

            <Button
                android:id="@+id/s20"
                style="@style/Square" />

            <Button
                android:id="@+id/s21"
                style="@style/Square" />

            <Button
                android:id="@+id/s22"
                style="@style/Square" />

            <Button
                android:id="@+id/s23"
                style="@style/Square" />

        </TableRow>

        <!--Row 4-->
        <TableRow>

            <Button
                android:id="@+id/s30"
                style="@style/Square" />

            <Button
                android:id="@+id/s31"
                style="@style/Square" />

            <Button
                android:id="@+id/s32"
                style="@style/Square" />

            <Button
                android:id="@+id/s33"
                style="@style/Square" />

        </TableRow>

    </TableLayout>

</RelativeLayout>